update application.properties file setting

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,10 @@
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
          version="2.4">
-    <display-name>Gupao Web Application</display-name>
+    <display-name>My Web Application</display-name>
     <servlet>
-        <servlet-name>gpmvc</servlet-name>
-        <servlet-class>com.gupaoedu.mvcframework.v3.servlet.GPDispatcherServlet</servlet-class>
+        <servlet-name>mymvc</servlet-name>
+        <servlet-class>com.king.mvcframework.servlet.GPDispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>application.properties</param-value>
@@ -15,7 +15,7 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>gpmvc</servlet-name>
+        <servlet-name>mymvc</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
 </web-app>
